parser/.antlr/JsonPathParser.java
// Generated from /Users/tio.pramayudi/Documents/dsp/jsonpath/parser/JsonPath.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JsonPathParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		IDENTIFIER=10, STRING=11, INT=12, WS=13, COLON=14, ROOT_IDENTIFIER=15, 
		LOCAL_IDENTIFIER=16, GREATER=17, GREATER_EQ=18, LESS=19, LESS_EQ=20, EQ=21, 
		NEQ=22, AND=23, OR=24;
	public static final int
		RULE_jsonpath = 0, RULE_root = 1, RULE_fieldAccess = 2, RULE_localFieldAccess = 3, 
		RULE_arrayQualifier = 4, RULE_arrayRange = 5, RULE_intSequence = 6, RULE_queryFieldValue = 7, 
		RULE_filterOperation = 8, RULE_queryExpr = 9, RULE_dbl = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"jsonpath", "root", "fieldAccess", "localFieldAccess", "arrayQualifier", 
			"arrayRange", "intSequence", "queryFieldValue", "filterOperation", "queryExpr", 
			"dbl"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'[*]'", "'['", "']'", "'[?('", "')]'", "'[@.length-'", 
			"'[:]'", "','", null, null, null, null, "':'", "'$.'", "'@.'", "'>'", 
			"'>='", "'<'", "'<='", "'=='", "'!='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "IDENTIFIER", 
			"STRING", "INT", "WS", "COLON", "ROOT_IDENTIFIER", "LOCAL_IDENTIFIER", 
			"GREATER", "GREATER_EQ", "LESS", "LESS_EQ", "EQ", "NEQ", "AND", "OR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JsonPath.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JsonPathParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class JsonpathContext extends ParserRuleContext {
		public RootContext root() {
			return getRuleContext(RootContext.class,0);
		}
		public JsonpathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonpath; }
	}

	public final JsonpathContext jsonpath() throws RecognitionException {
		JsonpathContext _localctx = new JsonpathContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_jsonpath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			root(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootContext extends ParserRuleContext {
		public TerminalNode ROOT_IDENTIFIER() { return getToken(JsonPathParser.ROOT_IDENTIFIER, 0); }
		public List<FieldAccessContext> fieldAccess() {
			return getRuleContexts(FieldAccessContext.class);
		}
		public FieldAccessContext fieldAccess(int i) {
			return getRuleContext(FieldAccessContext.class,i);
		}
		public RootContext root() {
			return getRuleContext(RootContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
	}

	public final RootContext root() throws RecognitionException {
		return root(0);
	}

	private RootContext root(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RootContext _localctx = new RootContext(_ctx, _parentState);
		RootContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_root, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(25);
			match(ROOT_IDENTIFIER);
			setState(26);
			fieldAccess();
			}
			_ctx.stop = _input.LT(-1);
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new RootContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_root);
					setState(28);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(31); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(29);
							match(T__0);
							setState(30);
							fieldAccess();
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(33); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FieldAccessContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JsonPathParser.IDENTIFIER, 0); }
		public ArrayQualifierContext arrayQualifier() {
			return getRuleContext(ArrayQualifierContext.class,0);
		}
		public FieldAccessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldAccess; }
	}

	public final FieldAccessContext fieldAccess() throws RecognitionException {
		FieldAccessContext _localctx = new FieldAccessContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fieldAccess);
		try {
			setState(46);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				match(IDENTIFIER);
				setState(41);
				arrayQualifier();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				match(IDENTIFIER);
				setState(43);
				match(T__0);
				setState(44);
				arrayQualifier();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(45);
				match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalFieldAccessContext extends ParserRuleContext {
		public TerminalNode LOCAL_IDENTIFIER() { return getToken(JsonPathParser.LOCAL_IDENTIFIER, 0); }
		public List<FieldAccessContext> fieldAccess() {
			return getRuleContexts(FieldAccessContext.class);
		}
		public FieldAccessContext fieldAccess(int i) {
			return getRuleContext(FieldAccessContext.class,i);
		}
		public LocalFieldAccessContext localFieldAccess() {
			return getRuleContext(LocalFieldAccessContext.class,0);
		}
		public LocalFieldAccessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localFieldAccess; }
	}

	public final LocalFieldAccessContext localFieldAccess() throws RecognitionException {
		return localFieldAccess(0);
	}

	private LocalFieldAccessContext localFieldAccess(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LocalFieldAccessContext _localctx = new LocalFieldAccessContext(_ctx, _parentState);
		LocalFieldAccessContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_localFieldAccess, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(49);
			match(LOCAL_IDENTIFIER);
			setState(50);
			fieldAccess();
			}
			_ctx.stop = _input.LT(-1);
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LocalFieldAccessContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_localFieldAccess);
					setState(52);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(55); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(53);
							match(T__0);
							setState(54);
							fieldAccess();
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(57); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ArrayQualifierContext extends ParserRuleContext {
		public ArrayQualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayQualifier; }
	 
		public ArrayQualifierContext() { }
		public void copyFrom(ArrayQualifierContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GetByQueryContext extends ArrayQualifierContext {
		public FilterOperationContext filterOperation() {
			return getRuleContext(FilterOperationContext.class,0);
		}
		public GetByQueryContext(ArrayQualifierContext ctx) { copyFrom(ctx); }
	}
	public static class GetAllContext extends ArrayQualifierContext {
		public GetAllContext(ArrayQualifierContext ctx) { copyFrom(ctx); }
	}
	public static class GetByIndexBackwardContext extends ArrayQualifierContext {
		public TerminalNode INT() { return getToken(JsonPathParser.INT, 0); }
		public GetByIndexBackwardContext(ArrayQualifierContext ctx) { copyFrom(ctx); }
	}
	public static class GetByIndicesContext extends ArrayQualifierContext {
		public IntSequenceContext intSequence() {
			return getRuleContext(IntSequenceContext.class,0);
		}
		public GetByIndicesContext(ArrayQualifierContext ctx) { copyFrom(ctx); }
	}
	public static class GetByRangeContext extends ArrayQualifierContext {
		public ArrayRangeContext arrayRange() {
			return getRuleContext(ArrayRangeContext.class,0);
		}
		public GetByRangeContext(ArrayQualifierContext ctx) { copyFrom(ctx); }
	}

	public final ArrayQualifierContext arrayQualifier() throws RecognitionException {
		ArrayQualifierContext _localctx = new ArrayQualifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arrayQualifier);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new GetAllContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				match(T__1);
				}
				break;
			case 2:
				_localctx = new GetByIndicesContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				match(T__2);
				setState(66);
				intSequence();
				setState(67);
				match(T__3);
				}
				break;
			case 3:
				_localctx = new GetByRangeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				arrayRange();
				}
				break;
			case 4:
				_localctx = new GetByQueryContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				match(T__4);
				setState(71);
				filterOperation();
				setState(72);
				match(T__5);
				}
				break;
			case 5:
				_localctx = new GetByIndexBackwardContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				match(T__6);
				setState(75);
				match(INT);
				setState(76);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayRangeContext extends ParserRuleContext {
		public ArrayRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayRange; }
	 
		public ArrayRangeContext() { }
		public void copyFrom(ArrayRangeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GivenStartEndIdxRangeContext extends ArrayRangeContext {
		public TerminalNode COLON() { return getToken(JsonPathParser.COLON, 0); }
		public List<TerminalNode> INT() { return getTokens(JsonPathParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(JsonPathParser.INT, i);
		}
		public GivenStartEndIdxRangeContext(ArrayRangeContext ctx) { copyFrom(ctx); }
	}
	public static class AllRangeContext extends ArrayRangeContext {
		public AllRangeContext(ArrayRangeContext ctx) { copyFrom(ctx); }
	}
	public static class GivenOnlyEndIdxRangeContext extends ArrayRangeContext {
		public TerminalNode COLON() { return getToken(JsonPathParser.COLON, 0); }
		public List<TerminalNode> INT() { return getTokens(JsonPathParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(JsonPathParser.INT, i);
		}
		public GivenOnlyEndIdxRangeContext(ArrayRangeContext ctx) { copyFrom(ctx); }
	}
	public static class GivenOnlyStartIdxRangeContext extends ArrayRangeContext {
		public TerminalNode COLON() { return getToken(JsonPathParser.COLON, 0); }
		public List<TerminalNode> INT() { return getTokens(JsonPathParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(JsonPathParser.INT, i);
		}
		public GivenOnlyStartIdxRangeContext(ArrayRangeContext ctx) { copyFrom(ctx); }
	}

	public final ArrayRangeContext arrayRange() throws RecognitionException {
		ArrayRangeContext _localctx = new ArrayRangeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayRange);
		int _la;
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new AllRangeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				match(T__7);
				}
				break;
			case 2:
				_localctx = new GivenStartEndIdxRangeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				match(T__2);
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(81);
					match(INT);
					}
					}
					setState(84); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==INT );
				setState(86);
				match(COLON);
				setState(88); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(87);
					match(INT);
					}
					}
					setState(90); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==INT );
				setState(92);
				match(T__3);
				}
				break;
			case 3:
				_localctx = new GivenOnlyEndIdxRangeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				match(T__2);
				setState(94);
				match(COLON);
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(95);
					match(INT);
					}
					}
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==INT );
				setState(100);
				match(T__3);
				}
				break;
			case 4:
				_localctx = new GivenOnlyStartIdxRangeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				match(T__2);
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(102);
					match(INT);
					}
					}
					setState(105); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==INT );
				setState(107);
				match(COLON);
				setState(108);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntSequenceContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(JsonPathParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(JsonPathParser.INT, i);
		}
		public IntSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intSequence; }
	}

	public final IntSequenceContext intSequence() throws RecognitionException {
		IntSequenceContext _localctx = new IntSequenceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_intSequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(INT);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(112);
				match(T__8);
				setState(113);
				match(INT);
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryFieldValueContext extends ParserRuleContext {
		public QueryFieldValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryFieldValue; }
	 
		public QueryFieldValueContext() { }
		public void copyFrom(QueryFieldValueContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class QueryFieldStringValueContext extends QueryFieldValueContext {
		public TerminalNode STRING() { return getToken(JsonPathParser.STRING, 0); }
		public QueryFieldStringValueContext(QueryFieldValueContext ctx) { copyFrom(ctx); }
	}
	public static class QueryFieldValueLocalAccessContext extends QueryFieldValueContext {
		public LocalFieldAccessContext localFieldAccess() {
			return getRuleContext(LocalFieldAccessContext.class,0);
		}
		public QueryFieldValueLocalAccessContext(QueryFieldValueContext ctx) { copyFrom(ctx); }
	}
	public static class QueryFieldValueRootAccessContext extends QueryFieldValueContext {
		public RootContext root() {
			return getRuleContext(RootContext.class,0);
		}
		public QueryFieldValueRootAccessContext(QueryFieldValueContext ctx) { copyFrom(ctx); }
	}
	public static class QueryFieldDoubleValueContext extends QueryFieldValueContext {
		public DblContext dbl() {
			return getRuleContext(DblContext.class,0);
		}
		public QueryFieldDoubleValueContext(QueryFieldValueContext ctx) { copyFrom(ctx); }
	}

	public final QueryFieldValueContext queryFieldValue() throws RecognitionException {
		QueryFieldValueContext _localctx = new QueryFieldValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_queryFieldValue);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOCAL_IDENTIFIER:
				_localctx = new QueryFieldValueLocalAccessContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				localFieldAccess(0);
				}
				break;
			case ROOT_IDENTIFIER:
				_localctx = new QueryFieldValueRootAccessContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				root(0);
				}
				break;
			case T__0:
			case INT:
				_localctx = new QueryFieldDoubleValueContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				dbl();
				}
				break;
			case STRING:
				_localctx = new QueryFieldStringValueContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterOperationContext extends ParserRuleContext {
		public QueryExprContext queryExpr() {
			return getRuleContext(QueryExprContext.class,0);
		}
		public FilterOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterOperation; }
	}

	public final FilterOperationContext filterOperation() throws RecognitionException {
		FilterOperationContext _localctx = new FilterOperationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_filterOperation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			queryExpr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryExprContext extends ParserRuleContext {
		public QueryExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryExpr; }
	 
		public QueryExprContext() { }
		public void copyFrom(QueryExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class QueryWithLogicalOpContext extends QueryExprContext {
		public Token logical_op;
		public List<QueryExprContext> queryExpr() {
			return getRuleContexts(QueryExprContext.class);
		}
		public QueryExprContext queryExpr(int i) {
			return getRuleContext(QueryExprContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(JsonPathParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(JsonPathParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(JsonPathParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(JsonPathParser.OR, i);
		}
		public QueryWithLogicalOpContext(QueryExprContext ctx) { copyFrom(ctx); }
	}
	public static class QueryExistenceContext extends QueryExprContext {
		public QueryFieldValueContext queryFieldValue() {
			return getRuleContext(QueryFieldValueContext.class,0);
		}
		public QueryExistenceContext(QueryExprContext ctx) { copyFrom(ctx); }
	}
	public static class QueryWithComparatorContext extends QueryExprContext {
		public Token comparator_op;
		public List<QueryFieldValueContext> queryFieldValue() {
			return getRuleContexts(QueryFieldValueContext.class);
		}
		public QueryFieldValueContext queryFieldValue(int i) {
			return getRuleContext(QueryFieldValueContext.class,i);
		}
		public TerminalNode GREATER() { return getToken(JsonPathParser.GREATER, 0); }
		public TerminalNode GREATER_EQ() { return getToken(JsonPathParser.GREATER_EQ, 0); }
		public TerminalNode LESS() { return getToken(JsonPathParser.LESS, 0); }
		public TerminalNode LESS_EQ() { return getToken(JsonPathParser.LESS_EQ, 0); }
		public TerminalNode EQ() { return getToken(JsonPathParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(JsonPathParser.NEQ, 0); }
		public QueryWithComparatorContext(QueryExprContext ctx) { copyFrom(ctx); }
	}

	public final QueryExprContext queryExpr() throws RecognitionException {
		return queryExpr(0);
	}

	private QueryExprContext queryExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		QueryExprContext _localctx = new QueryExprContext(_ctx, _parentState);
		QueryExprContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_queryExpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				_localctx = new QueryExistenceContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(128);
				queryFieldValue();
				}
				break;
			case 2:
				{
				_localctx = new QueryWithComparatorContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(129);
				queryFieldValue();
				setState(130);
				((QueryWithComparatorContext)_localctx).comparator_op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GREATER) | (1L << GREATER_EQ) | (1L << LESS) | (1L << LESS_EQ) | (1L << EQ) | (1L << NEQ))) != 0)) ) {
					((QueryWithComparatorContext)_localctx).comparator_op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(131);
				queryFieldValue();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new QueryWithLogicalOpContext(new QueryExprContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_queryExpr);
					setState(135);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(138); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(136);
							((QueryWithLogicalOpContext)_localctx).logical_op = _input.LT(1);
							_la = _input.LA(1);
							if ( !(_la==AND || _la==OR) ) {
								((QueryWithLogicalOpContext)_localctx).logical_op = (Token)_errHandler.recoverInline(this);
							}
							else {
								if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
								_errHandler.reportMatch(this);
								consume();
							}
							setState(137);
							queryExpr(0);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(140); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class DblContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(JsonPathParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(JsonPathParser.INT, i);
		}
		public DblContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dbl; }
	}
